--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "first-electron-app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "learn electronjs",
   "main": "main.js",
   "scripts": {
@@ -29,5 +29,9 @@
     "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.0",
     "update-electron-app": "^3.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/laksmanayudha/first-electron-app.git"
   }
 }
